@@ -68,7 +68,6 @@ public:
   static bool IsHD(const CStdString& strFileName);
   static bool IsBuiltIn(const CStdString& execString);
   static void ExecBuiltIn(const CStdString& execString);
-  static int cmpnocase(const char* str1, const char* str2);
   static bool GetParentPath(const CStdString& strPath, CStdString& strParent);
   static void GetQualifiedFilename(const CStdString &strBasePath, CStdString &strFilename);
   static bool PatchCountryVideo(F_COUNTRY Country, F_VIDEO Video);
